--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,6 +2,7 @@
 %head
   %title FFS
   = stylesheet_link_tag "application", media: "all"
+  = stylesheet_link_tag "//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css", media: "all"
   = csrf_meta_tags
 
 %body
