--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -6,7 +6,7 @@
   %img{src: 'app_loader.gif'}
 
 #ready
-  %ul#origin
+  #origin
 
   %p
     %label Final Fare
@@ -14,7 +14,7 @@
 
   %hr
 
-  %ul#waypoints
+  #waypoints
 
   #buttons
     %button#calculateShares.fa.fa-usd Get Fair Share
