--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -7,14 +7,18 @@ html {
 
 input[type='text'] {
   // display: block;
-  background-color: #fab;
-  border: 0;
+  // background-color: #fab;
+  // border: 0;
   margin: 0;
-  width: 100%;
+  padding: 0;
+  width: 90%;
 }
 
-h1 { text-align: left; background-color: #FBF; }
-hr { width: 90%; }
+h1 {
+  text-align: left;
+}
+
+hr { width: 100%; }
 
 button {
   font-size: .75em;
@@ -22,11 +26,21 @@ button {
   padding: 15px;
 }
 
+label {
+  display: block;
+}
+
+.addressInputControlls {
+  input, button { vertical-align: top; }
+}
+
 .waypoint { margin-top: 1.25em;}
 
-.fa:before {
-  padding-right: 10px;
-}
+.fa:before { padding-right: 10px; }
+
+.fa.fa-compass:before{ padding-right: 0; }
+
+.results { font-size: .85em; }
 
 .found {
   background-color: #BFB;
@@ -41,7 +55,6 @@ button {
 .getCurrentLocation.off { display: none; }
 
 .removeWaypoint{
-  display: block;
   background-color: #900;
   margin: 0 auto;
   width: 250px;
@@ -49,19 +62,19 @@ button {
 
 .getCurrentLocation {
   background-color: orange;
+  padding: 7px;
+  width: 55px;
 }
 
 img.loader { display: none; }
 
 #origin {
-  // background-color: blue;
   .results, .removeWaypoint { display: none; }
 }
 
 #loading { text-align: center; }
 
 #ready {
-  background-color: grey;
   display: none;
   margin: 0 auto;
   text-align: left;
@@ -81,6 +94,8 @@ img.loader { display: none; }
 
 #waypoints {
   margin-bottom: 60px;
+
+  .removeWaypoint { display: block; }
 }
 
 #calculateShares {
