--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,4 +1,8 @@
-body { padding: 0 30px;}
+$siteSpacing: 30px;
+$inputWidth: 90%;
+
+@import "compass/css3";
+@import "compass/utilities";
 
 html {
   font-size: 2em;
@@ -11,16 +15,20 @@ input[type='text'] {
   // border: 0;
   margin: 0;
   padding: 0;
-  width: 90%;
+  width: $inputWidth;
 }
 
 h1 {
   text-align: left;
+  margin-left: $siteSpacing;
 }
 
-hr { width: 100%; }
+hr { width: $inputWidth; }
 
 button {
+  @include border-radius(25px);
+  @include single-box-shadow;
+
   font-size: .75em;
   border: 1px solid gray;
   padding: 15px;
@@ -34,7 +42,9 @@ label {
   input, button { vertical-align: top; }
 }
 
-.waypoint { margin-top: 1.25em;}
+.waypoint {
+  margin-top: 1.25em;
+}
 
 .fa:before { padding-right: 10px; }
 
@@ -56,7 +66,7 @@ label {
 
 .removeWaypoint{
   background-color: #900;
-  margin: 0 auto;
+  margin: 10px auto 0;
   width: 250px;
 }
 
@@ -76,7 +86,9 @@ img.loader { display: none; }
 
 #ready {
   display: none;
+  // background-color: blue;
   margin: 0 auto;
+  padding: 0 $siteSpacing;
   text-align: left;
 }
 
