--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -77,6 +77,11 @@ button.removeWaypoint{
   color: black;
   padding: 7px;
   width: 55px;
+
+  &[disabled] {
+    @include box-shadow(blue 0 0 0);
+    background-color: gray;
+  }
 }
 
 img.loader { display: none; }
