--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,8 +1,9 @@
 !!!5
 %head
   %title FFS
-  = stylesheet_link_tag "application", media: "all"
-  = stylesheet_link_tag "//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css", media: "all"
+  / %meta{ name:'viewport', content: 'initial-scale=1' }
+  = stylesheet_link_tag 'application', media: 'all'
+  = stylesheet_link_tag '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css', media: 'all'
   = csrf_meta_tags
 
 %body
