Adjusted the markup to keep the loader gif inline with its label.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -35,11 +35,7 @@ button {
   padding: 15px;
 }
 
-label {
-  display: block;
-}
-
-.addressInputControlls {
+.addressInputControls {
   input, button { vertical-align: top; }
 }
 
