--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -13,4 +13,4 @@
   = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js'
   = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js'
   = javascript_include_tag '//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false'
-  = javascript_include_tag 'home'
+  = javascript_include_tag 'application'
