--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -125,3 +125,7 @@ img.loader { display: none; }
   border-bottom: solid 2px gray;
   padding-bottom: $siteSpacing/2;
 }
+
+#reports {
+  border: solid 5px blue;
+}
