--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,3 +14,5 @@
   = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js'
   = javascript_include_tag '//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false'
   = javascript_include_tag 'application'
+
+  = yield :bottom
