--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -28,6 +28,10 @@
     %button.getCurrentLocation.fa.fa-compass
   %button.removeWaypoint.fa.fa-trash-o Remove
 
+%script#tmpReport{type: 'txt/template'}
+  .report ({{mileage}} miles, {{percentage}}%, ${{fareShare}})
+
+
 - content_for :bottom do
   :coffee
     $ -> FFS.start(#{@stops})
