Complete the JS refactor.  Found that Google needs to be requested instead of held statically.  Tests will use the local GoogleJS file

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,6 +9,7 @@
 %body
   = yield
 
+  = javascript_include_tag '//maps.googleapis.com/maps/api/js?key=AIzaSyDupZ5WuFO8u8vRuDscjT-dQd2ju_YbwEQ&sensor=false'
   = javascript_include_tag 'application'
 
   = yield :bottom
