--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -29,9 +29,9 @@
   %button.removeWaypoint.fa.fa-trash-o Remove
 
 %script#tmpReport{type: 'txt/template'}
-  .report ({{mileage}} miles, {{percentage}}%, ${{fareShare}})
+  .report ({{mileage}}, {{percentage}}%, ${{fareShareString}})
 
 
 - content_for :bottom do
   :coffee
-    $ -> FFS.start(#{@stops})
+    $ -> FFS.start(#{@debug_stops})
