--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -17,8 +17,8 @@
   #reports
 
   #buttons
-    %button#addWaypoint.fa.fa-plus-square Add Cab Stop
-    %button#calculateShares.fa.fa-usd Get Fair Share
+    %button#calculateShares.fa.fa-usd Get Shares
+    %button#addWaypoint.fa.fa-plus-square Add Stop
 
 %script#tmpWaypoint{type: 'txt/template'}
   .addressInputControlHeader
