--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,7 +1,7 @@
 !!!5
 %head
   %title FFS
-  / %meta{ name:'viewport', content: 'initial-scale=1' }
+  %meta{ name:'viewport', content: 'initial-scale=1.0, maximum-scale=1.0, width=device-width' }
   = stylesheet_link_tag 'application', media: 'all'
   = stylesheet_link_tag '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css', media: 'all'
   = csrf_meta_tags
@@ -9,6 +9,8 @@
 %body
   = yield
 
+  / If you don't request this file, subsequent reqs fail for required JS objs
+  / Keep a version of this file around for test suite.
   = javascript_include_tag '//maps.googleapis.com/maps/api/js?key=AIzaSyDupZ5WuFO8u8vRuDscjT-dQd2ju_YbwEQ&sensor=false'
   = javascript_include_tag 'application'
 
