Updated the google API key.

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,7 +11,7 @@
 
   / If you don't request this file, subsequent reqs fail for required JS objs
   / Keep a version of this file around for test suite.
-  = javascript_include_tag '//maps.googleapis.com/maps/api/js?key=AIzaSyDupZ5WuFO8u8vRuDscjT-dQd2ju_YbwEQ&sensor=false'
+  = javascript_include_tag '//maps.googleapis.com/maps/api/js?key=AIzaSyBPvLt6QSnOzvJSwG0Wi3ol5bMGPiAEdCg'
   = javascript_include_tag 'application'
 
   = yield :bottom
