--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -3,7 +3,7 @@
   %title FFS
   %meta{ name:'viewport', content: 'initial-scale=1.0, maximum-scale=1.0, width=device-width' }
   = stylesheet_link_tag 'application', media: 'all'
-  = stylesheet_link_tag '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css', media: 'all'
+  = stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css', media: 'all'
   = csrf_meta_tags
 
 %body
