--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -2,8 +2,11 @@
 %h1 Fare Fair Share
 %p#intro
   A fair way to split a cab ride using a
-  %a{href: 'http://gothamist.com/2005/12/09/_the_economics.php', target: '_blank'} trip-leg
+  %a{href: 'https://github.com/abelmartin/fair-fare-share#introduction', target: '_blank'}
+    trip-leg
   algo.
+
+  %span#visit-on-mobile-web Try the site on a phone :)
 
 #loading
   %h2 Loading
