Cleaning up a sloppy anchor.

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -2,7 +2,7 @@
 %h1 Fare Fair Share
 %p#intro
   A fair way to split a cab ride using a
-  %a{href: 'https://github.com/abelmartin/fair-fare-share#introduction', target: '_blank'}
+  %a{href: 'https://github.com/abelmartin/fair-fare-share#introduction', target: '_blank'}<
     trip-leg
   algo.
 
